crates/ax/src/parser.rs
//! Recursive-descent parser. Generated conceptually from spec/grammar.ebnf.
//! One AST; this is the S-conventional frontend.

use crate::ast::*;
use crate::diag::{Diagnostic, Severity};
use crate::intern::{Interner, Symbol};
use crate::lexer::{LexError, Lexer, Token, TokenKind};
use crate::span::{FileId, Span};
use crate::types::Prim;

pub struct Parser<'a> {
    tokens: Vec<Token>,
    pos: usize,
    intern: &'a mut Interner,
    #[allow(dead_code)]
    file: FileId,
    pub diags: Vec<Diagnostic>,
}

impl<'a> Parser<'a> {
    pub fn parse_file(
        src: &str,
        file: FileId,
        intern: &'a mut Interner,
    ) -> Result<File, Vec<Diagnostic>> {
        let mut lexer = Lexer::new(src, file, intern);
        let tokens = match lexer.tokenize() {
            Ok(t) => t,
            Err(LexError { span, msg }) => {
                return Err(vec![Diagnostic::error("E0001", span, msg)]);
            }
        };
        let mut p = Parser {
            tokens,
            pos: 0,
            intern,
            file,
            diags: Vec::new(),
        };
        match p.parse_file_inner() {
            Ok(mut f) if p.diags.is_empty() => {
                // Every AST leaves the parser numbered; the checker's type
                // tables are indexed by these ids.
                crate::ast::renumber(&mut f);
                Ok(f)
            }
            Ok(_) => Err(std::mem::take(&mut p.diags)),
            Err(()) => Err(std::mem::take(&mut p.diags)),
        }
    }

    fn parse_file_inner(&mut self) -> Result<File, ()> {
        let start = self.cur().span;
        // v0.3: a missing `module` declaration is accepted (file-based modules).
        // v0.2 sources still write it. Either form is legal.
        let module = if self.at(TokenKind::Module) {
            self.bump();
            let m = self.parse_path()?;
            self.expect(TokenKind::Semi)?;
            m
        } else {
            Path {
                segs: Vec::new(),
                span: start,
            }
        };

        let mut exports = Vec::new();
        if self.at(TokenKind::Export) {
            self.bump();
            self.expect(TokenKind::LBrace)?;
            if !self.at(TokenKind::RBrace) {
                loop {
                    exports.push(self.parse_ident()?);
                    if self.at(TokenKind::Comma) {
                        self.bump();
                        continue;
                    }
                    break;
                }
            }
            self.expect(TokenKind::RBrace)?;
            self.expect(TokenKind::Semi)?;
        }

        let mut uses = Vec::new();
        while self.at(TokenKind::Use) {
            let us = self.cur().span;
            self.bump();
            let path = self.parse_path()?;
            let alias = if self.at(TokenKind::As) {
                self.bump();
                Some(self.parse_ident()?)
            } else {
                None
            };
            self.expect(TokenKind::Semi)?;
            uses.push(UseDecl {
                path,
                alias,
                span: us.merge(self.prev_span()),
            });
        }

        let mut decls = Vec::new();
        while !self.at(TokenKind::Eof) {
            decls.push(self.parse_decl()?);
        }

        Ok(File {
            node_count: 0,
            module,
            exports,
            uses,
            decls,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_decl(&mut self) -> Result<Decl, ()> {
        let start = self.cur().span;
        let mut meta = Vec::new();
        while self.at(TokenKind::At) {
            meta.push(self.parse_meta()?);
        }
        while self.at(TokenKind::Hash) {
            meta.push(self.parse_hash_attr()?);
        }
        // Corpus dialect only (R-14 / R-15). Agent-facing Ax is the tree
        // surface, which has no `pub`/`unsafe` to elide. These still parse
        // here so the existing corpus and `ax-mock` keep running.
        while self.at(TokenKind::Ident) {
            let n = self.intern.get(self.cur().symbol);
            if n == "pub" || n == "unsafe" {
                let id = self.parse_ident()?;
                meta.push(Meta {
                    key: id.clone(),
                    value: None,
                    span: id.span,
                });
                continue;
            }
            break;
        }
        let kind = if self.at(TokenKind::Contract) {
            self.bump();
            self.expect(TokenKind::Fn)?;
            DeclKind::ContractFn(self.parse_fn_rest()?)
        } else if self.at(TokenKind::Fn) {
            self.bump();
            DeclKind::Fn(self.parse_fn_rest()?)
        } else if self.at(TokenKind::Ident)
            && matches!(
                self.intern.get(self.cur().symbol),
                "struct" | "enum" | "impl" | "trait"
            )
        {
            // Rust-shaped type declarations. `struct`/`enum` become Type decls;
            // `impl`/`trait` are accepted and elided into a type alias so the
            // rest of the pipeline keeps working (A0101-family).
            DeclKind::Type(self.parse_rust_type_decl()?)
        } else if self.at(TokenKind::Type) {
            self.bump();
            DeclKind::Type(self.parse_type_decl()?)
        } else if self.at(TokenKind::Dict) {
            self.bump();
            DeclKind::Dict(self.parse_dict_decl()?)
        } else if self.at(TokenKind::Test) {
            self.bump();
            DeclKind::Test(self.parse_test_decl()?)
        } else {
            self.err("E0002", "expected declaration (fn, type, dict, test)");
            return Err(());
        };
        Ok(Decl {
            meta,
            kind,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_meta(&mut self) -> Result<Meta, ()> {
        let start = self.cur().span;
        self.expect(TokenKind::At)?;
        let key = self.parse_ident()?;
        let value = if self.at(TokenKind::String) {
            let t = self.bump();
            Some(MetaValue::String(self.intern.get(t.symbol).to_string()))
        } else if self.at(TokenKind::Ident) {
            let first = self.parse_ident()?;
            // Allow hyphenated meta values (`REQ-118`) without making `-` identifier syntax.
            if self.at(TokenKind::Minus) {
                let mut text = self.intern.get(first.name).to_string();
                while self.at(TokenKind::Minus) {
                    self.bump();
                    text.push('-');
                    if self.at(TokenKind::Ident) || self.at(TokenKind::Integer) {
                        let t = self.bump();
                        text.push_str(self.intern.get(t.symbol));
                    }
                }
                let sym = self.intern.intern(&text);
                Some(MetaValue::Ident(Ident {
                    name: sym,
                    span: first.span.merge(self.prev_span()),
                }))
            } else {
                Some(MetaValue::Ident(first))
            }
        } else if self.at(TokenKind::Integer) {
            let t = self.bump();
            let n = parse_int_text(self.intern.get(t.symbol)).unwrap_or(0) as i64;
            Some(MetaValue::Int(n))
        } else {
            None
        };
        Ok(Meta {
            key,
            value,
            span: start.merge(self.prev_span()),
        })
    }

    /// `#[no_alloc]`, `#[no_rc]`, `#[max_alloc(n)]`, `#[in(r)]`, `#[derive(…)]`.
    fn parse_hash_attr(&mut self) -> Result<Meta, ()> {
        let start = self.cur().span;
        self.expect(TokenKind::Hash)?;
        self.expect(TokenKind::LBracket)?;
        let key = self.parse_ident()?;
        let value = if self.at(TokenKind::LParen) {
            self.bump();
            let v = if self.at(TokenKind::Integer) {
                let t = self.bump();
                let n = parse_int_text(self.intern.get(t.symbol)).unwrap_or(0) as i64;
                Some(MetaValue::Int(n))
            } else if self.at(TokenKind::Ident) {
                Some(MetaValue::Ident(self.parse_ident()?))
            } else {
                None
            };
            // Swallow a derive list: `#[derive(Debug, Clone)]`.
            while self.at(TokenKind::Comma) {
                self.bump();
                if self.at(TokenKind::Ident) {
                    let _ = self.parse_ident()?;
                }
            }
            self.expect(TokenKind::RParen)?;
            v
        } else {
            None
        };
        self.expect(TokenKind::RBracket)?;
        Ok(Meta {
            key,
            value,
            span: start.merge(self.prev_span()),
        })
    }

    /// `struct Rec { … }`, `enum E { … }`, `impl … { … }`, `trait … { … }`.
    /// Mapped onto the existing `TypeDecl` so the rest of the pipeline is
    /// unchanged. `impl`/`trait` bodies are skipped (accept-and-elide).
    fn parse_rust_type_decl(&mut self) -> Result<TypeDecl, ()> {
        let kw = self.parse_ident()?;
        let which = self.intern.get(kw.name).to_string();
        let name = if self.at(TokenKind::Ident) {
            self.parse_ident()?
        } else {
            kw.clone()
        };
        let generics = if self.at(TokenKind::LBracket) || self.at(TokenKind::Lt) {
            self.parse_generics()?
        } else {
            Vec::new()
        };
        if which == "impl" || which == "trait" {
            // `impl From<A> for B { … }` becomes a declared injection so `?`
            // can convert A → B. Other impl/trait bodies are still skipped.
            let mut injections = Vec::new();
            if which == "impl" {
                let n = self.intern.get(name.name);
                if n == "From" || n == "from" {
                    let from_ty = if !generics.is_empty() {
                        TypeExpr {
                            kind: TypeExprKind::Named {
                                path: Path {
                                    segs: vec![generics[0].name.clone()],
                                    span: generics[0].name.span,
                                },
                                args: Vec::new(),
                            },
                            span: generics[0].name.span,
                        }
                    } else {
                        TypeExpr {
                            kind: TypeExprKind::Hole,
                            span: kw.span,
                        }
                    };
                    // `for Target`
                    if (self.at(TokenKind::Ident) && self.intern.get(self.cur().symbol) == "for")
                        || self.at(TokenKind::For)
                    {
                        self.bump();
                        let target = self.parse_ident()?;
                        injections.push(Injection {
                            from: from_ty,
                            into_variant: target,
                            span: kw.span,
                        });
                    }
                }
            }
            if self.at(TokenKind::LBrace) {
                self.skip_balanced_brace()?;
            }
            if self.at(TokenKind::Semi) {
                self.bump();
            }
            return Ok(TypeDecl {
                name,
                generics,
                body: TypeBody::Alias(TypeExpr {
                    kind: TypeExprKind::Hole,
                    span: kw.span,
                }),
                injections,
            });
        }
        if which == "enum" {
            self.expect(TokenKind::LBrace)?;
            let mut variants = Vec::new();
            while !self.at(TokenKind::RBrace) && !self.at(TokenKind::Eof) {
                let vname = self.parse_ident()?;
                let fields = if self.at(TokenKind::LBrace) {
                    self.parse_record_fields()?
                } else if self.at(TokenKind::LParen) {
                    self.bump();
                    let mut fs = Vec::new();
                    let mut idx = 0u32;
                    if !self.at(TokenKind::RParen) {
                        loop {
                            let ty = self.parse_type()?;
                            let fname = self.intern.intern(&format!("_{idx}"));
                            fs.push(Field {
                                name: Ident {
                                    name: fname,
                                    span: ty.span,
                                },
                                ty,
                            });
                            idx += 1;
                            if self.at(TokenKind::Comma) {
                                self.bump();
                                if self.at(TokenKind::RParen) {
                                    break;
                                }
                                continue;
                            }
                            break;
                        }
                    }
                    self.expect(TokenKind::RParen)?;
                    fs
                } else {
                    Vec::new()
                };
                variants.push(Variant {
                    name: vname,
                    fields,
                });
                if self.at(TokenKind::Comma) {
                    self.bump();
                }
            }
            self.expect(TokenKind::RBrace)?;
            if self.at(TokenKind::Semi) {
                self.bump();
            }
            return Ok(TypeDecl {
                name,
                generics,
                body: TypeBody::Variants(variants),
                injections: Vec::new(),
            });
        }
        // struct
        let fields = if self.at(TokenKind::LBrace) {
            self.parse_record_fields()?
        } else {
            Vec::new()
        };
        if self.at(TokenKind::Semi) {
            self.bump();
        }
        Ok(TypeDecl {
            name,
            generics,
            body: TypeBody::Record(fields),
            injections: Vec::new(),
        })
    }

    fn skip_balanced_brace(&mut self) -> Result<(), ()> {
        self.expect(TokenKind::LBrace)?;
        let mut depth = 1u32;
        while !self.at(TokenKind::Eof) && depth > 0 {
            match self.cur().kind {
                TokenKind::LBrace => {
                    depth += 1;
                    self.bump();
                }
                TokenKind::RBrace => {
                    depth -= 1;
                    self.bump();
                }
                _ => {
                    self.bump();
                }
            }
        }
        Ok(())
    }

    fn parse_fn_rest(&mut self) -> Result<FnDecl, ()> {
        let name = self.parse_ident()?;
        let generics = if self.at(TokenKind::LBracket) {
            self.parse_generics()?
        } else {
            Vec::new()
        };
        self.expect(TokenKind::LParen)?;
        let params = if self.at(TokenKind::RParen) {
            Vec::new()
        } else {
            self.parse_params()?
        };
        self.expect(TokenKind::RParen)?;
        self.expect(TokenKind::Arrow)?;
        let ret = self.parse_type()?;
        let effects = if self.at(TokenKind::BangLBrace) {
            self.parse_effects()?
        } else {
            EffectRow {
                omitted: true,
                ..EffectRow::default()
            }
        };
        let mut contracts = Vec::new();
        while matches!(
            self.cur().kind,
            TokenKind::Pre | TokenKind::Post | TokenKind::Inv
        ) {
            contracts.push(self.parse_contract()?);
        }
        // v0.2: `= expr;`. v0.3 / Rust: `{ body }` with no `=`.
        let body = if self.at(TokenKind::Eq) {
            self.bump();
            let b = self.parse_expr()?;
            self.expect(TokenKind::Semi)?;
            b
        } else if self.at(TokenKind::LBrace) {
            self.parse_block_expr()?
        } else {
            self.err("E0008", "expected `=` or `{` to start a function body");
            return Err(());
        };
        Ok(FnDecl {
            name,
            generics,
            params,
            ret,
            effects,
            contracts,
            body,
        })
    }

    fn parse_generics(&mut self) -> Result<Vec<GParam>, ()> {
        let close = if self.at(TokenKind::LBracket) {
            self.bump();
            TokenKind::RBracket
        } else {
            self.expect(TokenKind::Lt)?;
            TokenKind::Gt
        };
        let mut gs = Vec::new();
        if !self.at(close) {
            loop {
                let name = self.parse_ident()?;
                let bound = if self.at(TokenKind::Colon) {
                    self.bump();
                    Some(self.parse_type()?)
                } else {
                    None
                };
                gs.push(GParam { name, bound });
                if self.at(TokenKind::Comma) {
                    self.bump();
                    continue;
                }
                break;
            }
        }
        self.expect(close)?;
        Ok(gs)
    }

    fn parse_params(&mut self) -> Result<Vec<Param>, ()> {
        let mut ps = Vec::new();
        loop {
            let name = self.parse_ident()?;
            self.expect(TokenKind::Colon)?;
            let ty = self.parse_type()?;
            let default_dict = if self.at(TokenKind::Eq) {
                self.bump();
                self.expect(TokenKind::Default)?;
                true
            } else {
                false
            };
            ps.push(Param {
                name,
                ty,
                default_dict,
            });
            if self.at(TokenKind::Comma) {
                self.bump();
                if self.at(TokenKind::RParen) {
                    break;
                }
                continue;
            }
            break;
        }
        Ok(ps)
    }

    fn parse_effects(&mut self) -> Result<EffectRow, ()> {
        let start = self.cur().span;
        self.expect(TokenKind::BangLBrace)?;
        let mut items = Vec::new();
        if !self.at(TokenKind::RBrace) {
            loop {
                items.push(self.parse_effect()?);
                if self.at(TokenKind::Comma) {
                    self.bump();
                    if self.at(TokenKind::RBrace) {
                        break;
                    }
                    continue;
                }
                break;
            }
        }
        self.expect(TokenKind::RBrace)?;
        Ok(EffectRow {
            items,
            span: start.merge(self.prev_span()),
            omitted: false,
        })
    }

    fn parse_effect(&mut self) -> Result<Effect, ()> {
        let start = self.cur().span;
        let ident = self.parse_ident()?;
        let name = self.intern.get(ident.name).to_string();
        let kind = match name.as_str() {
            "err" => {
                self.expect(TokenKind::LBracket)?;
                let t = self.parse_type()?;
                self.expect(TokenKind::RBracket)?;
                EffectKind::Err(t)
            }
            "io" => {
                self.expect(TokenKind::LBracket)?;
                let c = self.parse_ident()?;
                self.expect(TokenKind::RBracket)?;
                EffectKind::Io(c)
            }
            "alloc" => {
                self.expect(TokenKind::LBracket)?;
                let a = self.parse_ident()?;
                self.expect(TokenKind::RBracket)?;
                EffectKind::Alloc(a)
            }
            "susp" => EffectKind::Susp,
            "diverge" => EffectKind::Diverge,
            "race" => EffectKind::Race,
            "nondet" => EffectKind::Nondet,
            "abort" => EffectKind::Abort,
            _ => {
                self.err_span(ident.span, "E0003", format!("unknown effect `{name}`"));
                EffectKind::Abort
            }
        };
        Ok(Effect {
            kind,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_contract(&mut self) -> Result<Contract, ()> {
        let start = self.cur().span;
        let kind = match self.cur().kind {
            TokenKind::Pre => ContractKind::Pre,
            TokenKind::Post => ContractKind::Post,
            TokenKind::Inv => ContractKind::Inv,
            _ => unreachable!(),
        };
        self.bump();
        // Contracts must not consume the `=` that starts the function body.
        let expr = self.parse_or()?;
        Ok(Contract {
            kind,
            expr,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_type_decl(&mut self) -> Result<TypeDecl, ()> {
        let name = self.parse_ident()?;
        let generics = if self.at(TokenKind::LBracket) {
            self.parse_generics()?
        } else {
            Vec::new()
        };
        self.expect(TokenKind::Eq)?;
        let body = if self.at(TokenKind::LBrace) && self.looks_like_record_type() {
            TypeBody::Record(self.parse_record_fields()?)
        } else if self.at(TokenKind::Pipe) {
            TypeBody::Variants(self.parse_variants()?)
        } else {
            TypeBody::Alias(self.parse_type()?)
        };
        let mut injections = Vec::new();
        if self.at(TokenKind::With) {
            self.bump();
            while self.at(TokenKind::From) {
                let start = self.cur().span;
                self.bump();
                let from = self.parse_type()?;
                self.expect(TokenKind::FatArrow)?;
                let into_variant = self.parse_ident()?;
                self.expect(TokenKind::Semi)?;
                injections.push(Injection {
                    from,
                    into_variant,
                    span: start.merge(self.prev_span()),
                });
            }
            // Each injection already ends with `;`. A further terminator is
            // optional so spec examples (Appendix A) parse as written.
            if self.at(TokenKind::Semi) {
                self.bump();
            }
        } else {
            self.expect(TokenKind::Semi)?;
        }
        Ok(TypeDecl {
            name,
            generics,
            body,
            injections,
        })
    }

    fn looks_like_record_type(&self) -> bool {
        // `{ ident :` is a record type; `{ ident :` could also be record lit
        // in expr position. Here we're in type position so `{` starts a record.
        true
    }

    fn parse_record_fields(&mut self) -> Result<Vec<Field>, ()> {
        self.expect(TokenKind::LBrace)?;
        let mut fields = Vec::new();
        if !self.at(TokenKind::RBrace) {
            loop {
                let name = self.parse_ident()?;
                self.expect(TokenKind::Colon)?;
                let ty = self.parse_type()?;
                fields.push(Field { name, ty });
                if self.at(TokenKind::Comma) {
                    self.bump();
                    if self.at(TokenKind::RBrace) {
                        break;
                    }
                    continue;
                }
                break;
            }
        }
        self.expect(TokenKind::RBrace)?;
        Ok(fields)
    }

    fn parse_variants(&mut self) -> Result<Vec<Variant>, ()> {
        let mut vs = Vec::new();
        while self.at(TokenKind::Pipe) {
            self.bump();
            let name = self.parse_ident()?;
            let fields = if self.at(TokenKind::LBrace) {
                self.parse_record_fields()?
            } else {
                Vec::new()
            };
            vs.push(Variant { name, fields });
        }
        Ok(vs)
    }

    fn parse_dict_decl(&mut self) -> Result<DictDecl, ()> {
        let name = self.parse_ident()?;
        self.expect(TokenKind::LBracket)?;
        let for_ty = self.parse_type()?;
        self.expect(TokenKind::RBracket)?;
        self.expect(TokenKind::Eq)?;
        let rec = self.parse_record_lit_fields()?;
        self.expect(TokenKind::Semi)?;
        Ok(DictDecl {
            name,
            for_ty,
            fields: rec,
        })
    }

    fn parse_test_decl(&mut self) -> Result<TestDecl, ()> {
        if !self.at(TokenKind::String) {
            self.err("E0004", "expected test name string");
            return Err(());
        }
        let t = self.bump();
        let name = self.intern.get(t.symbol).to_string();
        self.expect(TokenKind::Eq)?;
        let body = self.parse_expr()?;
        self.expect(TokenKind::Semi)?;
        Ok(TestDecl { name, body })
    }

    // ---------- types ----------

    fn parse_type_args(&mut self) -> Result<Vec<TypeExpr>, ()> {
        let close = if self.at(TokenKind::LBracket) {
            self.bump();
            TokenKind::RBracket
        } else {
            self.expect(TokenKind::Lt)?;
            TokenKind::Gt
        };
        let mut args = Vec::new();
        if !self.at(close) {
            loop {
                args.push(self.parse_type()?);
                if self.at(TokenKind::Comma) {
                    self.bump();
                    continue;
                }
                break;
            }
        }
        self.expect(close)?;
        Ok(args)
    }

    fn can_start_type(&self) -> bool {
        matches!(
            self.cur().kind,
            TokenKind::Ident
                | TokenKind::Fn
                | TokenKind::Amp
                | TokenKind::Own
                | TokenKind::LParen
                | TokenKind::LBracket
                | TokenKind::Question
                | TokenKind::Mut
        )
    }

    fn parse_type(&mut self) -> Result<TypeExpr, ()> {
        let start = self.cur().span;
        if self.at(TokenKind::Fn) {
            self.bump();
            self.expect(TokenKind::LParen)?;
            let mut params = Vec::new();
            if !self.at(TokenKind::RParen) {
                loop {
                    params.push(self.parse_type()?);
                    if self.at(TokenKind::Comma) {
                        self.bump();
                        continue;
                    }
                    break;
                }
            }
            self.expect(TokenKind::RParen)?;
            self.expect(TokenKind::Arrow)?;
            let ret = Box::new(self.parse_type()?);
            let effects = if self.at(TokenKind::BangLBrace) {
                self.parse_effects()?
            } else {
                EffectRow::default()
            };
            return Ok(TypeExpr {
                kind: TypeExprKind::Fn {
                    params,
                    ret,
                    effects,
                },
                span: start.merge(self.prev_span()),
            });
        }
        if self.at(TokenKind::Amp) {
            self.bump();
            // Forms: &T | &mut T | &r T | &r mut T | &[T] | &mut [T]
            let anon = self.intern.intern("_");
            if self.at(TokenKind::Mut) {
                self.bump();
                let inner = Box::new(self.parse_type()?);
                return Ok(TypeExpr {
                    kind: TypeExprKind::Ref {
                        region: Ident {
                            name: anon,
                            span: start,
                        },
                        mutable: true,
                        inner,
                    },
                    span: start.merge(self.prev_span()),
                });
            }
            if self.at(TokenKind::LBracket) {
                let inner = Box::new(self.parse_type()?);
                return Ok(TypeExpr {
                    kind: TypeExprKind::Ref {
                        region: Ident {
                            name: anon,
                            span: start,
                        },
                        mutable: false,
                        inner,
                    },
                    span: start.merge(self.prev_span()),
                });
            }
            if self.at(TokenKind::Ident) {
                let ident = self.parse_ident()?;
                let n = self.intern.get(ident.name).to_string();
                let next_is_type = self.can_start_type();
                if next_is_type {
                    let mutable = if self.at(TokenKind::Mut) {
                        self.bump();
                        true
                    } else {
                        false
                    };
                    let inner = Box::new(self.parse_type()?);
                    return Ok(TypeExpr {
                        kind: TypeExprKind::Ref {
                            region: ident,
                            mutable,
                            inner,
                        },
                        span: start.merge(self.prev_span()),
                    });
                }
                // `&str` / `&Rec` — ident is the type, region elided
                let args = if self.at(TokenKind::LBracket) {
                    self.parse_type_args()?
                } else {
                    Vec::new()
                };
                let named = if let Some(p) = Prim::from_str(&n) {
                    TypeExpr {
                        kind: TypeExprKind::Prim(p),
                        span: ident.span,
                    }
                } else {
                    TypeExpr {
                        kind: TypeExprKind::Named {
                            path: Path {
                                segs: vec![ident.clone()],
                                span: ident.span,
                            },
                            args,
                        },
                        span: ident.span,
                    }
                };
                return Ok(TypeExpr {
                    kind: TypeExprKind::Ref {
                        region: Ident {
                            name: anon,
                            span: start,
                        },
                        mutable: false,
                        inner: Box::new(named),
                    },
                    span: start.merge(self.prev_span()),
                });
            }
            let inner = Box::new(self.parse_type()?);
            return Ok(TypeExpr {
                kind: TypeExprKind::Ref {
                    region: Ident {
                        name: anon,
                        span: start,
                    },
                    mutable: false,
                    inner,
                },
                span: start.merge(self.prev_span()),
            });
        }
        if self.at(TokenKind::Own) {
            // v0.3: `own T` is the affine resource type. Use-after-move is a
            // hard error (A2020); that is the one place ownership rejects.
            self.bump();
            let inner = Box::new(self.parse_type()?);
            return Ok(TypeExpr {
                kind: TypeExprKind::Own(inner),
                span: start.merge(self.prev_span()),
            });
        }
        if self.at(TokenKind::LParen) {
            self.bump();
            let first = self.parse_type()?;
            if self.at(TokenKind::Comma) {
                let mut ts = vec![first];
                while self.at(TokenKind::Comma) {
                    self.bump();
                    if self.at(TokenKind::RParen) {
                        break;
                    }
                    ts.push(self.parse_type()?);
                }
                self.expect(TokenKind::RParen)?;
                return Ok(TypeExpr {
                    kind: TypeExprKind::Tuple(ts),
                    span: start.merge(self.prev_span()),
                });
            }
            self.expect(TokenKind::RParen)?;
            return Ok(first);
        }
        if self.at(TokenKind::Question) {
            self.bump();
            return Ok(TypeExpr {
                kind: TypeExprKind::Hole,
                span: start,
            });
        }
        // `[T]` slice type
        if self.at(TokenKind::LBracket) {
            self.bump();
            let inner = self.parse_type()?;
            self.expect(TokenKind::RBracket)?;
            let slice = self.intern.intern("slice");
            return Ok(TypeExpr {
                kind: TypeExprKind::Named {
                    path: Path {
                        segs: vec![Ident {
                            name: slice,
                            span: start,
                        }],
                        span: start.merge(self.prev_span()),
                    },
                    args: vec![inner],
                },
                span: start.merge(self.prev_span()),
            });
        }
        // named / primitive
        let path = self.parse_path()?;
        if path.segs.len() == 1 {
            let n = self.intern.get(path.segs[0].name);
            if let Some(p) = Prim::from_str(n) {
                return Ok(TypeExpr {
                    kind: TypeExprKind::Prim(p),
                    span: start.merge(self.prev_span()),
                });
            }
        }
        let args = if self.at(TokenKind::LBracket) || self.at(TokenKind::Lt) {
            self.parse_type_args()?
        } else {
            Vec::new()
        };
        let named = TypeExpr {
            kind: TypeExprKind::Named {
                path: path.clone(),
                args,
            },
            span: start.merge(self.prev_span()),
        };
        // Lattice constructors spelled as names: Untrusted[T] / Secret[T]
        // (and the Rust form Untrusted<T>).
        if path.segs.len() == 1 {
            match self.intern.get(path.segs[0].name) {
                "Untrusted" => {
